tests/compile-fail/Rule_16_6.rs
#[forbid(clippy_pedantic)]
#[forbid(clippy)]
#[forbid(warnings)]

fn main() {
    let i = 1;
    match i {
        _ => {},
    }
}
